set navbar_top's z-index to 1000 to avoid the navbar being hovered by the google map & renewed the name of 'unjoinButton and unbookmark' with 'unJoinButton and unBookmark' in loginElement.css

--- a/public/index.css
+++ b/public/index.css
@@ -22,7 +22,7 @@ body {
 }
 
 #navbar_top {
-    z-index: 999;
+    z-index: 1000;
 }
 
 @media screen and (min-width: 400px) and (max-width: 700px)  {
