--- a/public/login.css
+++ b/public/login.css
@@ -18,7 +18,7 @@ body {
 }
 
 #navbar_top {
-    z-index: 99;
+    z-index: 1000;
 }
 
 @media screen and (min-width: 400px) and (max-width: 700px)  {
